Implementação do RF013

--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -35,7 +35,7 @@
                     <a class="nav-link" [routerLink]="['']">Início</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" [routerLink]="['']">Visualizar Pedidos</a>
+                    <a class="nav-link" [routerLink]="['/visualizacao-pedidos']">Visualizar Pedidos</a>
                 </li>
                 <li class="nav-item" ngbDropdown>
                     <a class="nav-link" tabindex="0" ngbDropdownToggle id="navbarDropdown" role="button">Gerenciar</a>
