--- a/src/app/funcionario-pages/visualizacao-pedidos/visualizacao-pedidos.component.css
+++ b/src/app/funcionario-pages/visualizacao-pedidos/visualizacao-pedidos.component.css
@@ -1,20 +1,3 @@
-.table {
-    width: 100%;
-    border-collapse: collapse;
-}
-
-.table th, .table td {
-    padding: 8px;
-    text-align: center;
-}
-
-.form-select {
-    padding: 6px;
-    font-size: 16px;
-    border: 1px solid #ccc;
-    border-radius: 4px;
-}
-
 .amarelo {
 background-color: yellow;
 }
@@ -45,16 +28,25 @@ background-color: blue;
 
 .dtInput {
     margin: 5px;
-    width: 35%;
     border-radius: 4px;
 }
 
-.container-button {
-    display: flex;
-    align-items: center;
-    margin-top: 10px;
-  }
-  
-  .container-button .btn {
-    margin-left: 10px; 
-  }
+.dtLabel{
+    margin-left: 30px;
+}
+
+.filter{
+    width: 40%;
+    margin-left: 30px;
+}
+
+.btn-filter{
+    padding: 8px 16px;
+    font-size: 16px;
+    border: none;
+    border-radius: 4px;
+    background-color: #007bff;
+    color: white;
+    cursor: pointer;
+    display: inline-block;
+}
