Implementar RF017: listagem e adição de novos funcionários

--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -41,7 +41,7 @@
                     <a class="nav-link" tabindex="0" ngbDropdownToggle id="navbarDropdown" role="button">Gerenciar</a>
                     <div ngbDropdownMenu aria-labelledby="navbarDropdown" class="dropdown-menu custom-dropdown-menu">
                         <a ngbDropdownItem class="dropdown-item-hover" [routerLink]="['manutencao-roupa']">Roupas</a>
-                        <a ngbDropdownItem class="dropdown-item-hover" [routerLink]="['']">Funcionários</a>
+                        <a ngbDropdownItem class="dropdown-item-hover" [routerLink]="['manutencao-funcionario']">Funcionários</a>
                     </div>
                 </li>
                 <li class="nav-item" ngbDropdown>
