--- a/src/app/funcionario-pages/manutencao-funcionarios/manutencao-funcionarios-modais/editar-funcionarios-modal/editar-funcionarios-modal.component.html
+++ b/src/app/funcionario-pages/manutencao-funcionarios/manutencao-funcionarios-modais/editar-funcionarios-modal/editar-funcionarios-modal.component.html
@@ -2,14 +2,14 @@
   <div class="modal-container d-flex justify-content-center align-items-center">
     <div class="card shadow-lg custom-card border-0">
       <div class="card-body">
-        <div class="container-adicionar-funcionario-texto">
-          <h5 class="adicionar-funcionario-text card-title">Adicionar Funcionário</h5>
-          <h6 class="adicionar-funcionario-phrase card-subtitle">
-            Adicione aqui um novo funcionário.
+        <div class="container-editar-funcionario-texto">
+          <h5 class="editar-funcionario-text card-title">Editar Funcionário</h5>
+          <h6 class="editar-funcionario-phrase card-subtitle">
+            Edite aqui o funcionário existente.
           </h6>
         </div>
 
-        <form #formAdicionarFuncionario="ngForm" class="container-form">
+        <form #formEditarFuncionario="ngForm" class="container-form">
           <div class="container-imput">
             <div class="imput-form">
               <div id="form-floating-nome-funcionario">
@@ -24,15 +24,18 @@
                     #nome="ngModel"
                     required
                     [class.invalid-border]="
-                      nome.invalid && (nome.dirty || nome.touched)
+                      nome.invalid &&
+                      (nome.dirty || nome.touched)
                     "
                     maxlength="100"
                   />
-                  <label for="descricao">Nome do funcionário</label>
+                  <label for="nome">Nome do funcionário</label>
                 </div>
               </div>
               <div
-                *ngIf="nome.errors && (nome.dirty || nome.touched)"
+                *ngIf="
+                  nome.errors && (nome.dirty || nome.touched)
+                "
                 class="left-align text-danger"
               >
                 <div [hidden]="!nome.errors['required']">
@@ -71,7 +74,7 @@
             </div>
 
             <div class="imput-form">
-              <div id="form-floating-dataNascimento-funcionario">
+              <div id="form-floating-preco-funcionario">
                 <div class="form-floating">
                   <input
                     type="text"
@@ -81,50 +84,24 @@
                     placeholder=" "
                     [(ngModel)]="dataNascimentoFuncionario"
                     #dataNascimento="ngModel"
+                    required
+                    currencyMask
+                    [options]="{ 
+                                        prefix: 'R$ ', thousands: '.', decimal: ',', align: 'left', allowNegative: false, allowZero: false, precision: 2, }"
+                    [class.invalid-border]="
+                      dataNascimento.invalid && (dataNascimento.dirty || dataNascimento.touched)
+                    "
                     (focus)="clearValueInvalid()"
                   />
-                  <label for="dataNascimento">Data de Nascimento</label>
+                  <label for="dataNascimento">Data de nascimento</label>
                 </div>
               </div>
               <div
-                *ngIf="
-                  dataNascimento.errors &&
-                  (dataNascimento.dirty || dataNascimento.touched)
-                "
+                *ngIf="dataNascimento.errors && (dataNascimento.dirty || dataNascimento.touched)"
                 class="left-align text-danger"
               >
                 <div [hidden]="!dataNascimento.errors['required']">
                   Insira a data de nascimento do funcionário
-                </div>
-              </div>
-            </div>
-
-            <div class="imput-form">
-              <div id="form-floating-tempo-funcionario">
-                <div class="form-floating">
-                  <input
-                    type="password"
-                    class="form-control custom-input"
-                    name="senha"
-                    id="senha"
-                    placeholder=" "
-                    [(ngModel)]="senhaFuncionario"
-                    #senha="ngModel"
-                    required
-                    pattern="[0-9]*"
-                    [class.invalid-border]="
-                      senha.invalid && (senha.dirty || senha.touched)
-                    "
-                  />
-                  <label for="senha">Senha</label>
-                </div>
-              </div>
-              <div
-                *ngIf="senha.errors && (senha.dirty || senha.touched)"
-                class="left-align text-danger"
-              >
-                <div [hidden]="!senha.errors['required']">
-                  Insira a senha do funcionário
                 </div>
               </div>
             </div>
@@ -141,11 +118,11 @@
           </button>
           <button
             type="button"
-            class="btn btn-primary custom-btn btn-adicionar"
-            (click)="adicionar()"
-            [disabled]="!formAdicionarFuncionario.form.valid"
+            class="btn btn-primary custom-btn btn-salvar"
+            (click)="salvar()"
+            [disabled]="!formEditarFuncionario.form.valid"
           >
-            Adicionar
+            Salvar
           </button>
         </div>
       </div>
