--- a/src/app/funcionario-pages/manutencao-funcionarios/manutencao-funcionarios.component.html
+++ b/src/app/funcionario-pages/manutencao-funcionarios/manutencao-funcionarios.component.html
@@ -1,38 +1,58 @@
-<div class="container">
-  <h2 class="card-title text-center mt-3">Gerenciamento de funcionários</h2>
-</div>
+<div class="background">
+  <div class="d-flex justify-content-center align-items-center" style="min-height: calc(100vh - 80px);">
+      <div class="container">
+          <div class="card shadow-lg custom-card border-0">
+              <div class="card-body">
 
-<h3 class="text-center m-5">Funcionários atuais</h3>
-<div class="card-body text-center">
-  <button type="submit" class="btn btn-primary mb-3" (click)="adicionar()">
-    Adicionar
-  </button>
-</div>
+                  <div class="container-manutencao-roupas-texto">
+                      <h5 class="manutencao-roupas-text card-title">Funcionários Cadastrados</h5>
+                      <h6 class="manutencao-roupas-phrase card-subtitle">Gerencie aqui os funcionarios cadastrados.</h6>
+                  </div>
 
-<div class="card mb-3 d-flex justify-content-center">
-  <table class="table">
-    <thead>
-      <tr class="text-center">
-        <th scope="col">Nome</th>
-        <th scope="col">Email</th>
-        <th scope="col">Data de nascimento</th>
-        <th scope="col">Ação</th>
-      </tr>
-    </thead>
-    <tbody class="text-center">
-      @for (func of funcionarios; track $index) {
-      <tr>
-        <td>{{ func.nome }}</td>
-        <td>{{ func.email }}</td>
-        <td>{{ func.dataNascimento}}</td>
-        <td>
-          <button type="button" class="btn btn-warning" (click)="adicionar()">
-            Editar
-          </button>
-          <button type="button" class="btn btn-danger">Remover</button>
-        </td>
-      </tr>
-      }
-    </tbody>
-  </table>
+                  <div class="container-btn-adicionar d-flex justify-content-end mt-auto">
+                      <button type="submit" class="btn btn-primary custom-btn btn-add" (click)="adicionar()">Adicionar</button>
+                  </div>
+
+                  <div *ngIf="funcionariosIsPresent === true">
+                      <div class="container-table shadow-sm alarm-table table-responsive">
+                          <table class="table table-hover">
+                              <thead>
+                                  <tr class="custom-headers">
+                                      <th scope="col">Nome:</th>
+                                      <th scope="col">Email:</th>
+                                      <th scope="col">Data de Nascimento:</th>
+                                      <th scope="col" style="border-right: none;"></th>
+                                      <th scope="col"></th>
+                                  </tr>
+                              </thead>
+                              <tbody class="table-items-body custom-tr-items">
+                                  <tr *ngFor="let item of funcionario;">
+                                      <td style="width: 54%;">{{ item.nome }}</td>
+                                      <td style="width: 20%;">{{ item.email }}</td>
+                                      <td style="width: 10%;">{{ item.dataNascimento }}</td>
+                                      <td style="width: 8%; text-align: center; border-right: none;"><button type="button" class="btn-table btn-edit" (click)="editar(item)">Editar</button></td>
+                                      <td style="width: 8%; text-align: center;"><button type="button" class="btn-table btn-remove" (click)="excluir(item)">Excluir</button></td>
+                                  </tr>
+                              </tbody>
+                          </table>
+                      </div>
+                  </div>
+                  
+                  <div *ngIf="funcionariosIsPresent === false" class="alert-container">
+                      <div class="alert-container row justify-content-center">
+                          <div class="alert alert-danger mt-3 text-center">
+                              <p class="mb-0">Nenhum funcionário cadastrado!</p>
+                              <p class="mb-0">Clique no botão "Adicionar" para adicionar um novo funcionário.</p>
+                          </div>
+                      </div>
+                  </div>
+
+                  <div class="container-button-voltar d-flex justify-content-end mt-auto">
+                      <button type="button" class="btn btn-primary custom-btn btn-voltar" (click)="voltar()">Voltar</button>
+                  </div>
+                  
+              </div>
+          </div>
+      </div>
+  </div>
 </div>
