--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -48,7 +48,7 @@
                     <a class="nav-link" tabindex="0" ngbDropdownToggle id="navbarDropdown" role="button">Relatórios</a>
                     <div ngbDropdownMenu aria-labelledby="navbarDropdown" class="dropdown-menu custom-dropdown-menu">
                         <a ngbDropdownItem class="dropdown-item-hover" [routerLink]="['relatorio-receitas']">Receitas</a>
-                        <a ngbDropdownItem class="dropdown-item-hover" [routerLink]="['']">Clientes</a>
+                        <a ngbDropdownItem class="dropdown-item-hover" [routerLink]="['relatorio-clientes']">Clientes</a>
                         <a ngbDropdownItem class="dropdown-item-hover" [routerLink]="['']">Clientes Fiéis</a>
                     </div>
                 </li>
