--- a/src/app/funcionario-pages/manutencao-funcionarios/manutencao-funcionarios.component.html
+++ b/src/app/funcionario-pages/manutencao-funcionarios/manutencao-funcionarios.component.html
@@ -21,15 +21,15 @@
                                       <th scope="col">Nome:</th>
                                       <th scope="col">Email:</th>
                                       <th scope="col">Data de Nascimento:</th>
-                                      <th scope="col" style="border-right: none;"></th>
+                                      <th scope="col" style="border-right: none;">Ação</th>
                                       <th scope="col"></th>
                                   </tr>
                               </thead>
                               <tbody class="table-items-body custom-tr-items">
                                   <tr *ngFor="let item of funcionario;">
-                                      <td style="width: 54%;">{{ item.nome }}</td>
-                                      <td style="width: 20%;">{{ item.email }}</td>
-                                      <td style="width: 10%;">{{ item.dataNascimento }}</td>
+                                      <td style="width: 30%;">{{ item.nome }}</td>
+                                      <td style="width: 30%;">{{ item.email }}</td>
+                                      <td style="width: 24%;">{{ item.dataNascimento }}</td>
                                       <td style="width: 8%; text-align: center; border-right: none;"><button type="button" class="btn-table btn-edit" (click)="editar(item)">Editar</button></td>
                                       <td style="width: 8%; text-align: center;"><button type="button" class="btn-table btn-remove" (click)="excluir(item)">Excluir</button></td>
                                   </tr>
