--- a/client/src/app/components/navbar/navbar.component.html
+++ b/client/src/app/components/navbar/navbar.component.html
@@ -49,7 +49,7 @@
                     <div ngbDropdownMenu aria-labelledby="navbarDropdown" class="dropdown-menu custom-dropdown-menu">
                         <a ngbDropdownItem class="dropdown-item-hover" [routerLink]="['relatorio-receitas']">Receitas</a>
                         <a ngbDropdownItem class="dropdown-item-hover" [routerLink]="['relatorio-clientes']">Clientes</a>
-                        <a ngbDropdownItem class="dropdown-item-hover" [routerLink]="['']">Clientes Fiéis</a>
+                        <a ngbDropdownItem class="dropdown-item-hover" [routerLink]="['relatorio-clientes-fieis']">Clientes Fiéis</a>
                     </div>
                 </li>
                 <li class="nav-item">
