Ajustes e correções nas telas de pedido e relatorio clientes fieis

--- a/client/src/app/cliente-pages/pedido/pedido.component.html
+++ b/client/src/app/cliente-pages/pedido/pedido.component.html
@@ -51,6 +51,6 @@
     <div class="d-flex align-items-center">
       <button class="btn btn-success mt-2 mr-md-2" id="aprovar" (click)="aprovarPedido()">Aprovar</button>
       <div class="cancelar">
-        <button class= "btn mt-2" id="cancelar">Cancelar</button>
+        <button class= "btn btn-danger btn mt-2" (click)="rejeitarPedido()">Cancelar</button>
     </div>
   </div>
