--- a/client/src/app/funcionario-pages/relatorio-clientes-fieis/relatorio-clientes-fieis.component.css
+++ b/client/src/app/funcionario-pages/relatorio-clientes-fieis/relatorio-clientes-fieis.component.css
@@ -105,8 +105,10 @@ body {
 .btn-relatorio {
     width: 165px;
     background-color: #3dabe1;
-    margin-left: 25px;
+    margin-right: 63%;
+    height: 50px;
 }
+
 
 .btn-relatorio:hover {
     background-color: #1c8bc1;
@@ -117,7 +119,9 @@ body {
 }
 
 .container-buttons {
-    margin-top: 35px;
+    margin-top: 25px;
+    margin-bottom: 35px;
+    height: 50px;
 }
 
 .btn-voltar {
