--- a/client/src/app/cliente-pages/pagar-pedido/pagar-pedido.component.html
+++ b/client/src/app/cliente-pages/pagar-pedido/pagar-pedido.component.html
@@ -1,26 +1,38 @@
 <div class="background">
-    <div class="d-flex justify-content-center align-items-center" style="height: 100vh;">
+    <div class="d-flex justify-content-center align-items-start" style="height: 100vh; padding-top: 20px;">
         <div class="container">
             <div class="card shadow-lg custom-card border-0">
+                <div class="card-header">
+                    <h4>Número do Pedido</h4>
+                </div>
                 <div class="card-body">
-
                     <div class="container-dados-pedido">
-                        <div class="container-card-pedido-codigo card">
-                            <p>Número do Pedido: {{ pedido?.codigoPedido }}</p>
+                        <div class="row mb-3">
+                            <div class="col">
+                                <p>Número do Pedido:</p>
+                                <p><strong>{{ pedido?.codigoPedido }}</strong></p>
+                            </div>
                         </div>
-                        <div class="container-situacao-pedido-text">
-                            <p>Situação do Pedido: {{ pedido?.situacao }}</p>
+                        <div class="row mb-3">
+                            <div class="col">
+                                <p>Situação do Pedido:</p>
+                                <p><strong>{{ pedido?.situacao }}</strong></p>
+                            </div>
                         </div>
-                        <div class="container-data-criacao-pedido-text">
-                            <p>Data de Criação: {{ pedido?.dataCriacao | date: 'dd/MM/yyyy HH:mm' }}</p>
+                        <div class="row mb-3">
+                            <div class="col">
+                                <p>Data de Criação:</p>
+                                <p><strong>{{ pedido?.dataCriacao | date: 'dd/MM/yyyy HH:mm' }}</strong></p>
+                            </div>
                         </div>
-                        <div class="container-preco-total-pedido-text">
-                            <p>Preço Total: {{ pedido?.precoTotal | currency:'BRL' }}</p>
+                        <div class="row mb-3">
+                            <div class="col">
+                                <p>Preço Total:</p>
+                                <p><strong>{{ pedido?.precoTotal | currency:'BRL' }}</strong></p>
+                            </div>
                         </div>
                     </div>
-
-                    <button class="btn btn-primary" (click)="pagarPedido()">Confirmar Pagamento</button>
-
+                    <button class="btn btn-primary btn-lg btn-block" (click)="pagarPedido()">Confirmar Pagamento</button>
                 </div>
             </div>
         </div>
