--- a/client/src/app/auth/cadastro/cadastro.component.html
+++ b/client/src/app/auth/cadastro/cadastro.component.html
@@ -62,7 +62,7 @@
                                 </div>
                             </div>
                             <div class="container-link mt-auto">
-                                <a id="text-login">Já possui conta? </a><a id="text-login-link" routerLink="/login">Fazer Login</a>
+                                <a id="text-login">Já tem uma conta? </a><a id="text-login-link" routerLink="/login">Fazer Login</a>
                             </div>
                             <div class="container-button">
                                 <button type="submit" class="btn btn-primary custom-btn" (click)="cadastro()" [disabled]="!formCadastro.form.valid">Cadastrar</button>
